# beamtest

./: .gitignore  README.txt  ana1.sh  analyze.sh  copydata.sh  draw.cxx  elecali.sh  rec.sh  rec0.sh  rec1.sh
2024/: CMakeLists.txt  ECALDigi.cc  Reconstruction.cc  drawshower.cxx  drawtime.cxx
2024/include/: ClusterSplitter.hh  Neighbor.hh  Parameter.hh  SeedFinder.hh  Shower.hh  ShowerPosition.hh
2024/src/: ClusterSplitter.cc  Decode.cc  RecHit.cc  ShowerEnergy.cc
2025/ECAL/: AnalyzeData.cpp  CMakeLists.txt  ECALDigi.cc  ECALTrigger.cc  ECALdig2root2025.cc  ReadMe.txt  Reconstruction.cc  SeekParameters.cc  decode.sh  multiReconstruction.cc
2025/ECAL/include/: Cluster.hh  Cluster2Shower.hh  ClusterSplitter.hh  DataModel2025.hh  Decode.hh  Decode2025.hh  Hit2Cluster.hh  Parameter.hh  RecHit.hh  ShowerEnergy.hh  ShowerShape.hh  data_model.hh
2025/ECAL/process/: CMakeLists.txt  DrawPosEnergy.cc  DrawValue.cc  FitMip.cc  ReadOnline.cc  SeekParameters.cc  decode.sh  process.sh
2025/ECAL/src/: Cluster2Shower.cc  ClusterSplitter.cc  DataModel2025.cc  Decode.cc  Decode2025.cc  Hit2Cluster.cc  Parameter.cc  RecHit.cc  Shower.cc  ShowerPosition.cc  data_model.cc
ECALBeamTestV3/: CMakeLists.txt  ECALdig2root.cc  Filter.cc  GetWaveform.cc  ReadRootFile.cc  RecTime.cc  Reconstruction.cc  StabilityAna.cc  TriggerDecode.cc  filelist.txt  test.C
ECALBeamTestV3/include/: Cluster2Shower.hh  RecHit.hh
ECALBeamTestV3/src/: Cluster.cc  Cluster2Shower.cc  Decode.cc  Neighbor.cc  Parameter.cc  RecHit.cc  SeedFinder.cc  ShowerShape.cc
data/20251011_7/: data_EBS_index.txt  workmode.json
data/20251011_7/scripts/: ECAL.py
data/20251012_13/: data_EBS_index.txt
data/20251012_13/scripts/: ECAL.py
data/20251012_14/: data_EBS_index.txt
data/20251012_14/scripts/: DAQ.py  ECAL.py
data/20251012_15/: data_EBS_index.txt
data/20251012_15/scripts/: ECAL.py
data/20251012_16/: data_EBS_index.txt
data/20251012_16/scripts/: ECAL.py
data/20251012_19/: data_EBS_index.txt
data/20251012_19/scripts/: ECAL.py
data/20251012_20/: data_EBS_index.txt
data/20251012_21/: data_EBS_index.txt
data/20251012_22/: data_EBS_index.txt
data/20251012_23/: data_EBS_index.txt
data/20251012_24/: data_EBS_index.txt  workmode.json
data/20251013_44/: data_EBS_index.txt
data/20251013_47/: data_EBS_index.txt
data/20251013_48/: data_EBS_index.txt
data/20251013_49/: data_EBS_index.txt
data/20251013_50/: data_EBS_index.txt
data/20251013_51/: data_EBS_index.txt
data/20251013_52/: data_EBS_index.txt
data/20251013_53/: data_EBS_index.txt  workmode.json
data/20251013_54/: data_EBS_index.txt
data/20251013_55/: data_EBS_index.txt
data/20251013_56/: data_EBS_index.txt
data/20251013_57/: data_EBS_index.txt
data/20251016_20/: data_ECAL_index.txt
data/20251016_21/: data_ECAL_index.txt
data/20251016_22/: data_ECAL_index.txt
data/20251016_23/: data_ECAL_index.txt
data/20251016_24/: data_ECAL_index.txt
data/20251016_25/: data_ECAL_index.txt  workmode.json
data/20251016_26/: data_ECAL_index.txt
data/20251016_27/: data_ECAL_index.txt
data/20251024_1/: data_ECAL_index.txt  workmode.json
draw/: drawwave.cxx  getparforrec.cxx
draw/drawval/: CMakeLists.txt  draw5x5sumwave.cxx  drawhlratio.cxx  drawsumwave.cxx  drawval.cxx
draw/drawval/old/: drawval.cxx  drawval2.cxx
draw/drawwave/: CMakeLists.txt  draw5x5.cxx  drawunwave.cxx  drawwave.cxx
draw/elecal/: CMakeLists.txt  Waveform_HighGain_Ch3_3.txt  Waveform_LowGain_Ch3_3.txt  drawCal.cxx  drawPeak.cxx  drawledPeak.cxx  getPeak.cxx  getwave.cxx  rootfile.txt
draw/elecal/para/: all_data_EBS_20251012T131004_0.txt  all_data_EBS_20251012T131115_0.txt  all_data_EBS_20251012T131205_0.txt  all_data_EBS_20251012T131255_0.txt  all_data_EBS_20251012T131655_0.txt  all_data_EBS_20251012T131808_0.txt  all_data_EBS_20251012T131925_0.txt  all_data_EBS_20251012T132035_0.txt  all_data_EBS_20251012T132136_0.txt  all_data_EBS_20251013T170242_0.txt  all_data_EBS_20251013T170431_0.txt  all_data_EBS_20251013T170637_0.txt  all_data_EBS_20251013T170801_0.txt  all_data_EBS_20251013T170931_0.txt  all_data_EBS_20251013T171105_0.txt  all_data_EBS_20251013T171246_0.txt  all_data_EBS_20251013T171425_0.txt  all_data_EBS_20251013T171551_0.txt  all_data_EBS_20251013T171723_0.txt  all_data_EBS_20251013T171900_0.txt  all_data_ECAL_20251016T124114_0.txt  all_data_ECAL_20251016T124253_0.txt  all_data_ECAL_20251016T124406_0.txt  all_data_ECAL_20251016T124513_0.txt  all_data_ECAL_20251016T124617_0.txt  all_data_ECAL_20251016T124735_0.txt  all_data_ECAL_20251016T124854_0.txt  all_data_ECAL_20251016T124954_0.txt  all_re.txt  peakvalues_data_EBS_20251012T131004_0.txt  peakvalues_data_EBS_20251012T131115_0.txt  peakvalues_data_EBS_20251012T131205_0.txt  peakvalues_data_EBS_20251012T131255_0.txt  peakvalues_data_EBS_20251012T131655_0.txt  peakvalues_data_EBS_20251012T131808_0.txt  peakvalues_data_EBS_20251012T131925_0.txt  peakvalues_data_EBS_20251012T132035_0.txt  peakvalues_data_EBS_20251012T132136_0.txt  peakvalues_data_EBS_20251012T132241_0.txt  peakvalues_data_EBS_20251013T170242_0.txt  (+20 more)
draw/forpar/: CMakeLists.txt  changepos.cxx  drawhlratio.cxx  entries.txt  fitmip.cxx  gethmax.cxx  getlist.sh  getmip.cxx  getnosped.cxx  mipget.sh
draw/par/: hlratio-data_EBS_20251013T153230_0.txt  hlratio-data_ECAL_20251018T072645_21.txt  hlratio-re.txt
draw/rec/: 1000MeVep2.txt  1000MeVep3.txt  1000MeVep5.txt  1gevele.txt  2000MeVep.txt  200MeVep.txt  2500MeVep.txt  300MeVep.txt  3500MeVep.txt  400MeVep.txt  500MeVep.txt  600MeVep.txt  EnergyResolution.txt  EnergyResolution2.txt  EntryNumber.txt  EntryNumbermode2.txt  checkmode.cxx  draw2d.cxx  drawEReso.cxx  drawdiffpos.cxx  drawfitshower.cxx  drawpos.cxx  drawshower.cxx  drawtracker.cxx  drawtrackfitshower.cxx  fit.sh  fit2.sh  getlist.sh  sumfit.sh  sumfit2.sh
draw/test/: CMakeLists.txt  checkamp.cxx  checktime.cxx  ecal.txt  ecal_101921.txt  pidb.txt  time_comparison_ecal_pidb.txt  time_comparison_ecal_track.txt  time_comparison_ecal_trigger.txt  track.txt  track_101921.txt  trigger.txt
list/: elec.txt
(+95 files in other folders)
